cluster updates working
