# pkg/api/handler/rest/v1/cluster-service.pb.go
@@ -83,9 +83,7 @@ type Cluster struct {
 	// Type of lb policy
 	LbPolicy string `protobuf:"bytes,2,opt,name=LbPolicy,proto3" json:"LbPolicy,omitempty"`
 	// list of hosts
-	Hosts []*Hosts `protobuf:"bytes,3,rep,name=hosts,proto3" json:"hosts,omitempty"`
-	// unique cluster version
-	Version              string   `protobuf:"bytes,4,opt,name=version,proto3" json:"version,omitempty"`
+	Hosts                []*Hosts `protobuf:"bytes,3,rep,name=hosts,proto3" json:"hosts,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -137,22 +135,17 @@ func (m *Cluster) GetHosts() []*Hosts {
 	return nil
 }
 
-func (m *Cluster) GetVersion() string {
-	if m != nil {
-		return m.Version
-	}
-	return ""
-}
-
 // Request data to create new Cluster
 type CreateRequest struct {
 	// for which node to create the cluster
 	NodeId string `protobuf:"bytes,1,opt,name=nodeId,proto3" json:"nodeId,omitempty"`
 	// List of clusters
-	Cluster              []*Cluster `protobuf:"bytes,2,rep,name=cluster,proto3" json:"cluster,omitempty"`
-	XXX_NoUnkeyedLiteral struct{}   `json:"-"`
-	XXX_unrecognized     []byte     `json:"-"`
-	XXX_sizecache        int32      `json:"-"`
+	Cluster []*Cluster `protobuf:"bytes,2,rep,name=cluster,proto3" json:"cluster,omitempty"`
+	// the version
+	Version              string   `protobuf:"bytes,3,opt,name=version,proto3" json:"version,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
 }
 
 func (m *CreateRequest) Reset()         { *m = CreateRequest{} }
@@ -194,13 +187,20 @@ func (m *CreateRequest) GetCluster() []*Cluster {
 	return nil
 }
 
+func (m *CreateRequest) GetVersion() string {
+	if m != nil {
+		return m.Version
+	}
+	return ""
+}
+
 // Contains data of created Cluster
 // last id 2
 type CreateResponse struct {
 	// The node where the cluster has been created
 	NodeId string `protobuf:"bytes,1,opt,name=nodeId,proto3" json:"nodeId,omitempty"`
 	// versions of the created clusters
-	Versions             []string `protobuf:"bytes,2,rep,name=versions,proto3" json:"versions,omitempty"`
+	Version              string   `protobuf:"bytes,2,opt,name=version,proto3" json:"version,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -238,11 +238,11 @@ func (m *CreateResponse) GetNodeId() string {
 	return ""
 }
 
-func (m *CreateResponse) GetVersions() []string {
+func (m *CreateResponse) GetVersion() string {
 	if m != nil {
-		return m.Versions
+		return m.Version
 	}
-	return nil
+	return ""
 }
 
 // Request data to update a cluster
@@ -652,50 +652,48 @@ func init() {
 func init() { proto.RegisterFile("cluster-service.proto", fileDescriptor_e8681304beda874e) }
 
 var fileDescriptor_e8681304beda874e = []byte{
-	// 683 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x95, 0xcf, 0x4e, 0xdb, 0x4a,
-	0x14, 0x87, 0x65, 0x27, 0x24, 0xe4, 0x04, 0x02, 0x8c, 0x04, 0xe4, 0x5a, 0x5c, 0xd5, 0x72, 0x5b,
-	0x01, 0xa1, 0xc4, 0x24, 0x65, 0x05, 0x8b, 0x96, 0x3f, 0xad, 0x40, 0x6a, 0x51, 0xe5, 0xaa, 0x8b,
-	0xd2, 0x95, 0x63, 0x9f, 0x06, 0x57, 0xc6, 0xe3, 0x7a, 0x26, 0xa1, 0x15, 0x62, 0xc3, 0x23, 0xb4,
-	0xbb, 0xee, 0xba, 0xe8, 0x13, 0xf5, 0x15, 0x2a, 0xf5, 0x35, 0x2a, 0xcf, 0x8c, 0x43, 0xdc, 0x10,
-	0x85, 0xae, 0xf0, 0x9c, 0x99, 0xf9, 0xe6, 0xf3, 0x6f, 0x38, 0x0e, 0x2c, 0x7a, 0x61, 0x8f, 0x71,
-	0x4c, 0x36, 0x19, 0x26, 0xfd, 0xc0, 0xc3, 0x66, 0x9c, 0x50, 0x4e, 0x89, 0xde, 0x6f, 0x19, 0x2b,
-	0x5d, 0x4a, 0xbb, 0x21, 0xda, 0x6e, 0x1c, 0xd8, 0x6e, 0x14, 0x51, 0xee, 0xf2, 0x80, 0x46, 0x4c,
-	0xae, 0x30, 0x1e, 0x89, 0x3f, 0xde, 0x66, 0x17, 0xa3, 0x4d, 0x76, 0xe1, 0x76, 0xbb, 0x98, 0xd8,
-	0x34, 0x16, 0x2b, 0x46, 0x57, 0x5b, 0x1b, 0x30, 0x75, 0x44, 0x19, 0x67, 0xa4, 0x06, 0x7a, 0x10,
-	0xd7, 0x35, 0x53, 0x5b, 0xab, 0x38, 0x7a, 0x10, 0x13, 0x02, 0xc5, 0x98, 0x26, 0xbc, 0xae, 0x9b,
-	0xda, 0xda, 0xac, 0x23, 0x9e, 0xad, 0x6b, 0x0d, 0xca, 0x07, 0x52, 0x8b, 0x98, 0x50, 0x55, 0x86,
-	0x27, 0xee, 0x39, 0xaa, 0x8d, 0xc3, 0x25, 0x62, 0xc0, 0xf4, 0x8b, 0xce, 0x2b, 0x1a, 0x06, 0xde,
-	0x67, 0x41, 0xa9, 0x38, 0x83, 0x31, 0xb9, 0x07, 0x53, 0x67, 0xe9, 0xb1, 0xf5, 0x82, 0x59, 0x58,
-	0xab, 0xb6, 0x2b, 0xcd, 0x7e, 0xab, 0x29, 0x3c, 0x1c, 0x59, 0x27, 0x75, 0x28, 0xf7, 0x31, 0x61,
-	0x01, 0x8d, 0xea, 0x45, 0xb1, 0x37, 0x1b, 0x5a, 0x27, 0x30, 0x7b, 0x90, 0xa0, 0xcb, 0xd1, 0xc1,
-	0x8f, 0x3d, 0x64, 0x9c, 0x2c, 0x41, 0x29, 0xa2, 0x3e, 0x1e, 0xfb, 0x4a, 0x42, 0x8d, 0xc8, 0x43,
-	0x28, 0x2b, 0x9d, 0xba, 0x2e, 0x4e, 0xa9, 0xa6, 0xa7, 0x28, 0x7f, 0x27, 0x9b, 0xb3, 0x0e, 0xa1,
-	0x96, 0xf1, 0x58, 0x4c, 0x23, 0x86, 0x63, 0x81, 0x06, 0x4c, 0x2b, 0x09, 0x26, 0x88, 0x15, 0x67,
-	0x30, 0x4e, 0xad, 0xde, 0xc4, 0xfe, 0xbf, 0x5a, 0x69, 0x63, 0xad, 0xf6, 0xa1, 0x96, 0xf1, 0x26,
-	0x58, 0x0d, 0x25, 0xa5, 0xe7, 0x93, 0x7a, 0x06, 0xb3, 0x87, 0x18, 0xe2, 0x64, 0xa7, 0x15, 0xa8,
-	0xa8, 0x3d, 0xc7, 0xbe, 0x82, 0xdc, 0x14, 0x52, 0x95, 0x0c, 0x33, 0x59, 0xc5, 0x17, 0x2b, 0x7d,
-	0x95, 0x4f, 0x36, 0xb4, 0x6c, 0x58, 0x74, 0xd0, 0xf5, 0xf7, 0xc2, 0x50, 0xb9, 0x3c, 0xa7, 0xc9,
-	0x09, 0xf5, 0xc7, 0xa2, 0xac, 0xb7, 0xb0, 0x34, 0xd8, 0x20, 0x4f, 0x9d, 0xb0, 0x83, 0xac, 0xc2,
-	0xb4, 0x0a, 0x8f, 0xdd, 0x76, 0xdf, 0x83, 0x49, 0xeb, 0x09, 0x54, 0x53, 0xf4, 0xa4, 0x50, 0xc6,
-	0xe7, 0xfa, 0x12, 0x66, 0x24, 0x60, 0x42, 0x1c, 0x77, 0xbb, 0xea, 0xf6, 0xef, 0x02, 0xd4, 0x54,
-	0xf1, 0xb5, 0xec, 0x75, 0x12, 0x0d, 0xde, 0x5e, 0x4d, 0xb0, 0xec, 0xed, 0xff, 0x4b, 0x11, 0xb7,
-	0x46, 0x69, 0x18, 0xb9, 0xa9, 0x5c, 0x68, 0xd6, 0xff, 0xd7, 0x3f, 0x7f, 0x7d, 0xd5, 0x97, 0xc9,
-	0xa2, 0xdd, 0x6f, 0xd9, 0x59, 0x12, 0xf6, 0xa5, 0x14, 0xbd, 0x22, 0x47, 0x50, 0x92, 0x3d, 0x40,
-	0x16, 0x84, 0xe2, 0x70, 0x7f, 0x19, 0x64, 0xb8, 0x24, 0xb1, 0xd6, 0xb2, 0xe0, 0x2d, 0x58, 0x33,
-	0xc3, 0xbc, 0x1d, 0xad, 0x41, 0x4e, 0xa1, 0x98, 0x2a, 0x90, 0xb9, 0x4c, 0x26, 0xa3, 0xcc, 0xdf,
-	0x14, 0x14, 0xc3, 0x16, 0x8c, 0x75, 0xb2, 0x7a, 0xab, 0x93, 0xad, 0xd2, 0xb6, 0x2f, 0xd5, 0xc3,
-	0x15, 0x79, 0x07, 0x25, 0xd9, 0x13, 0xd2, 0x32, 0xd7, 0x6f, 0xd2, 0x32, 0xdf, 0x32, 0x56, 0x43,
-	0x9c, 0xf0, 0xc0, 0xf8, 0xdb, 0xf2, 0x74, 0xa1, 0x3d, 0x22, 0xde, 0x81, 0x92, 0xfc, 0x2f, 0x97,
-	0xf0, 0x5c, 0xe3, 0x48, 0x78, 0xbe, 0x09, 0xac, 0x96, 0x80, 0x6f, 0x34, 0xd6, 0xef, 0xa6, 0x7f,
-	0xec, 0x5f, 0xed, 0xff, 0xd0, 0xbe, 0xec, 0x7d, 0xd7, 0xc8, 0x2e, 0xcc, 0xa9, 0x6b, 0x35, 0xd5,
-	0xc7, 0xdd, 0xba, 0x3f, 0x52, 0x32, 0xe6, 0x79, 0x12, 0xbc, 0x77, 0xa3, 0xa7, 0xae, 0x4f, 0x3b,
-	0xd8, 0xf4, 0xe8, 0x79, 0xbb, 0xd0, 0x6a, 0x6e, 0x35, 0x34, 0xad, 0x3d, 0xef, 0xc6, 0x71, 0x18,
-	0x78, 0xe2, 0x3b, 0x6e, 0x7f, 0x60, 0x34, 0xda, 0x19, 0xa9, 0x38, 0xbb, 0x50, 0xd8, 0xde, 0xda,
-	0x26, 0xdb, 0xd0, 0x70, 0x90, 0xf7, 0x92, 0x08, 0x7d, 0xf3, 0xe2, 0x0c, 0x23, 0x93, 0x9f, 0xa1,
-	0x99, 0x20, 0xa3, 0xbd, 0xc4, 0x43, 0xd3, 0xa7, 0xc8, 0xcc, 0x88, 0x72, 0x13, 0x3f, 0x05, 0x8c,
-	0x37, 0x49, 0x09, 0x8a, 0xdf, 0x74, 0xad, 0xdc, 0x29, 0x89, 0xdf, 0x86, 0xc7, 0x7f, 0x02, 0x00,
-	0x00, 0xff, 0xff, 0xa6, 0x7e, 0xde, 0xcb, 0x84, 0x06, 0x00, 0x00,
+	// 652 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x94, 0x4f, 0x6f, 0xd3, 0x30,
+	0x14, 0xc0, 0x95, 0x74, 0x6b, 0xd7, 0xd7, 0x75, 0x7f, 0x2c, 0x6d, 0x2b, 0xd1, 0x10, 0x51, 0x00,
+	0x31, 0x15, 0xd6, 0xac, 0x65, 0xa7, 0xed, 0x00, 0xdb, 0x00, 0x6d, 0x12, 0x54, 0x28, 0x88, 0x03,
+	0x70, 0xca, 0x92, 0x47, 0x1b, 0x94, 0xd9, 0x21, 0x76, 0x3b, 0x10, 0xe2, 0xc2, 0x47, 0x80, 0x1b,
+	0x37, 0x0e, 0x7c, 0x10, 0x3e, 0x03, 0x5f, 0x81, 0x0f, 0x82, 0x62, 0x3b, 0x5d, 0x43, 0x57, 0x15,
+	0x38, 0xb5, 0x7e, 0xb6, 0x7f, 0xef, 0x97, 0x67, 0x3f, 0xc3, 0x5a, 0x10, 0x0f, 0xb8, 0xc0, 0x74,
+	0x9b, 0x63, 0x3a, 0x8c, 0x02, 0x6c, 0x25, 0x29, 0x13, 0x8c, 0x98, 0xc3, 0xb6, 0xb5, 0xd9, 0x63,
+	0xac, 0x17, 0xa3, 0xeb, 0x27, 0x91, 0xeb, 0x53, 0xca, 0x84, 0x2f, 0x22, 0x46, 0xb9, 0x5a, 0x61,
+	0xdd, 0x91, 0x3f, 0xc1, 0x76, 0x0f, 0xe9, 0x36, 0x3f, 0xf7, 0x7b, 0x3d, 0x4c, 0x5d, 0x96, 0xc8,
+	0x15, 0x93, 0xab, 0x9d, 0xdb, 0x30, 0x7f, 0xcc, 0xb8, 0xe0, 0x64, 0x09, 0xcc, 0x28, 0x69, 0x18,
+	0xb6, 0xb1, 0x55, 0xf5, 0xcc, 0x28, 0x21, 0x04, 0xe6, 0x12, 0x96, 0x8a, 0x86, 0x69, 0x1b, 0x5b,
+	0x75, 0x4f, 0xfe, 0x77, 0xfa, 0x50, 0x39, 0x52, 0x56, 0xc4, 0x86, 0x9a, 0x16, 0xec, 0xfa, 0x67,
+	0xa8, 0xf7, 0x8d, 0x87, 0x88, 0x05, 0x0b, 0x8f, 0x4f, 0x9f, 0xb2, 0x38, 0x0a, 0xde, 0x4b, 0x48,
+	0xd5, 0x1b, 0x8d, 0xc9, 0x35, 0x98, 0xef, 0x67, 0x59, 0x1b, 0x25, 0xbb, 0xb4, 0x55, 0xeb, 0x54,
+	0x5b, 0xc3, 0x76, 0x4b, 0x6a, 0x78, 0x2a, 0xee, 0xf4, 0xa1, 0x7e, 0x94, 0xa2, 0x2f, 0xd0, 0xc3,
+	0xb7, 0x03, 0xe4, 0x82, 0xac, 0x43, 0x99, 0xb2, 0x10, 0x4f, 0x42, 0x9d, 0x4a, 0x8f, 0xc8, 0x4d,
+	0xa8, 0xe8, 0xa4, 0x0d, 0x53, 0xb2, 0x6a, 0x19, 0x4b, 0x5b, 0x7a, 0xf9, 0x1c, 0x69, 0x40, 0x65,
+	0x88, 0x29, 0x8f, 0x18, 0x6d, 0x94, 0xe4, 0xfe, 0x7c, 0xe8, 0x1c, 0xc2, 0x52, 0x9e, 0x89, 0x27,
+	0x8c, 0x72, 0x9c, 0x9a, 0x6a, 0x8c, 0x61, 0x16, 0x19, 0x5d, 0xa8, 0x3f, 0x4f, 0xc2, 0x7f, 0xb5,
+	0x35, 0xa6, 0xd9, 0x66, 0x4e, 0x39, 0xef, 0xbf, 0x9d, 0x1e, 0x42, 0xfd, 0x01, 0xc6, 0x38, 0xdb,
+	0x69, 0x13, 0xaa, 0x7a, 0xcf, 0x49, 0xa8, 0x21, 0x17, 0x81, 0x4c, 0x25, 0xc7, 0xcc, 0x56, 0x09,
+	0xe5, 0xca, 0x50, 0x9e, 0x44, 0xd5, 0xcb, 0x87, 0x8e, 0x0b, 0x6b, 0x1e, 0xfa, 0xe1, 0x41, 0x1c,
+	0x6b, 0x97, 0x47, 0x2c, 0xed, 0xb2, 0x70, 0x2a, 0xca, 0x79, 0x01, 0xeb, 0xa3, 0x0d, 0x2a, 0xeb,
+	0x8c, 0x1d, 0xe4, 0x16, 0x2c, 0xe8, 0xe2, 0xf1, 0xcb, 0xee, 0xc1, 0x68, 0xd2, 0xb9, 0x07, 0xb5,
+	0x0c, 0x3d, 0xab, 0x28, 0xd3, 0xeb, 0xfa, 0x04, 0x16, 0x15, 0x60, 0x46, 0x39, 0xfe, 0xee, 0xa8,
+	0x3b, 0x3f, 0x4a, 0xb0, 0xa4, 0x83, 0xcf, 0x54, 0xa3, 0x13, 0x3a, 0xfa, 0x7a, 0x3d, 0xc1, 0xf3,
+	0xaf, 0xbf, 0x92, 0x21, 0x2e, 0x2d, 0xa5, 0x65, 0x15, 0xa6, 0x0a, 0x45, 0x73, 0xae, 0x7e, 0xfa,
+	0xf9, 0xeb, 0x8b, 0xb9, 0x41, 0xd6, 0xdc, 0x61, 0xdb, 0xcd, 0x2b, 0xe1, 0x7e, 0x50, 0xa2, 0x1f,
+	0xc9, 0x31, 0x94, 0x55, 0x07, 0x90, 0x55, 0xa9, 0x38, 0xde, 0x77, 0x16, 0x19, 0x0f, 0x29, 0xac,
+	0xb3, 0x21, 0x79, 0xab, 0xce, 0xe2, 0x38, 0x6f, 0xcf, 0x68, 0x92, 0x63, 0x98, 0xcb, 0x14, 0xc8,
+	0x72, 0x2e, 0x93, 0x53, 0x56, 0x2e, 0x02, 0x9a, 0x31, 0xc3, 0xe9, 0x15, 0x94, 0x55, 0x07, 0x28,
+	0xa7, 0x42, 0x77, 0x29, 0xa7, 0x62, 0x83, 0x38, 0x4d, 0xc9, 0xbb, 0x61, 0xfd, 0xe9, 0xf4, 0x72,
+	0xb5, 0x33, 0xa1, 0xd9, 0x85, 0xb2, 0xba, 0xd3, 0x0a, 0x5e, 0x68, 0x13, 0x05, 0x2f, 0x5e, 0xf9,
+	0x5c, 0xb6, 0x79, 0xb9, 0xec, 0xe1, 0x77, 0xe3, 0xf3, 0xc1, 0x37, 0x83, 0xec, 0xc3, 0xb2, 0x3e,
+	0x30, 0x5b, 0xbf, 0xd9, 0xce, 0xf5, 0x89, 0x90, 0xb5, 0x22, 0xd2, 0xe8, 0xb5, 0x4f, 0xef, 0xfb,
+	0x21, 0x3b, 0xc5, 0x56, 0xc0, 0xce, 0x3a, 0xa5, 0x76, 0x6b, 0xa7, 0x69, 0x18, 0x9d, 0x15, 0x3f,
+	0x49, 0xe2, 0x28, 0x90, 0xcf, 0xb3, 0xfb, 0x86, 0x33, 0xba, 0x37, 0x11, 0xf1, 0xf6, 0xa1, 0xb4,
+	0xbb, 0xb3, 0x4b, 0x76, 0xa1, 0xe9, 0xa1, 0x18, 0xa4, 0x14, 0x43, 0xfb, 0xbc, 0x8f, 0xd4, 0x16,
+	0x7d, 0xb4, 0x53, 0xe4, 0x6c, 0x90, 0x06, 0x68, 0x87, 0x0c, 0xb9, 0x4d, 0x99, 0xb0, 0xf1, 0x5d,
+	0xc4, 0x45, 0x8b, 0x94, 0x61, 0xee, 0xab, 0x69, 0x54, 0x4e, 0xcb, 0xf2, 0xc9, 0xbf, 0xfb, 0x3b,
+	0x00, 0x00, 0xff, 0xff, 0x4a, 0x0f, 0xdb, 0x7f, 0x5b, 0x06, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
